--- a/point.html
+++ b/point.html
@@ -7,6 +7,44 @@
     <title>Punto en plano cartesiano</title>
 </head>
 <body>
-    <h1>Punto en plano cartesiano</h1>
+    <center>
+        <canvas id="grid" width="610" height="610" style="border:1px solid #00ff00;"></canvas>
+    </center>
+
+    <script type="text/javascript">
+        var canva = document.getElementById('grid');
+        // La razón por la que le pasamos el valor '2d' al contexto
+        // es para poder dibujar gráficos 2d en el canvas
+        var context = canva.getContext('2d');
+
+        // unidades pequeñas/individuales
+        for (let i = 5; i < 606; i = i + 6) {
+            // lineas verticales
+            context.moveTo(i, 5);
+            context.lineTo(i, 605);
+
+            // lineas horizontales
+            context.moveTo(5, i);
+            context.lineTo(605, i);
+
+            context.strokeStyle = "#f0f0f0";
+            context.stroke();
+        }
+
+        // unidades grandes
+        context.beginPath();
+        for (let i = 5; i < 606; i = i + 30) {
+            // líneas verticales
+            context.moveTo(i, 5);
+            context.lineTo(i, 605);
+
+            // lineas horizontales
+            context.moveTo(5, i);
+            context.lineTo(605, i);
+
+            context.strokeStyle = "#c0c0c0";
+            context.stroke();
+        }
+    </script>
 </body>
 </html>
